feat(Refactor): Improve API & Refactor Code